--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,8 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es5",
-		"sourceMap": true,
-		"outDir": "build"
+		"sourceMap": true
 	},
 	"exclude": [
 		"node_modules"
